[package]
version = "0.1.0"
name = "seed-outliner"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["etoal83 <etoal83@gmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
indexmap = "1.8.0"
indextree = "4.4.0"
itertools = "0.10.3"
seed = { git = "https://github.com/seed-rs/seed", branch = "master" }
seed_styles = { git = "https://github.com/seed-rs/styles_hooks", package = "seed_styles", branch = "main" }
unicode-segmentation = "1.9.0"
uuid = "0.8.2"

[dependencies.web-sys]
version = "*"
features = [
  "Range",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
