[package]
version = "0.1.0"
name = "seed-outliner"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["etoal83 <etoal83@gmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
generational-indextree = { version = "1.1", features = ["deser",] }
# indextree = { version = "4.4.0", features = ["deser",] }
itertools = "0.10.3"
seed = { git = "https://github.com/seed-rs/seed", branch = "master" }
seed_styles = { git = "https://github.com/seed-rs/styles_hooks", package = "seed_styles", branch = "main" }
serde = { version = "1.0", features = ["derive",] }
unicode-segmentation = "1.9.0"
uuid = { version = "1.1", features = ["v4", "js", "serde",]}

[dependencies.web-sys]
version = "*"
features = [
  "Range",
  "ClipboardEvent",
  "DataTransfer",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
